--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,9 +61,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - Assets/Logos/emirates_logo.png
+    - Assets/Logos/flu_dubai.png
+    - Assets/Logos/book_me_pk.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
